# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

DLP_ROOT_DIR = "//base/security/dlp_permission_service"

module_output_path = "dlp_permission/dlp_permission"

ohos_fuzztest("ParseCertFuzzTest") {
  module_out_path = module_output_path
  fuzz_config_file =
      "$DLP_ROOT_DIR/test/fuzztest/dlp_permission/parsecert_fuzzer"

  include_dirs = [
    "//third_party/json/include",
    "//utils/native/base/include",

    "$DLP_ROOT_DIR/frameworks/common/include",
    "$DLP_ROOT_DIR/services/dlp_permission/sa/sa_common",
    "$DLP_ROOT_DIR/interfaces/inner_api/dlp_permission/include",
    "$DLP_ROOT_DIR/services/dlp_permission/sa/credential_test/",
  ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  cflags_cc = [ "-DHILOG_ENABLE" ]
  sources = [
    "$DLP_ROOT_DIR/frameworks/common/src/hex_string.cpp",
    "$DLP_ROOT_DIR/services/dlp_permission/sa/sa_common/dlp_permission_serializer.cpp",
    "parsecert_fuzzer.cpp",
  ]

  deps = [
    "$DLP_ROOT_DIR/interfaces/inner_api/dlp_permission:libdlp_permission_sdk",
    "//utils/native/base:utils",
  ]

  external_deps = [ "hiviewdfx_hilog_native:libhilog" ]
}
